fixed spacing

--- a/src/components/ContactMe/ContactMe.module.scss
+++ b/src/components/ContactMe/ContactMe.module.scss
@@ -11,9 +11,7 @@
         gap: 2rem;
     }
     span {
-        display: flex;
-        align-items: center;
-        gap: 1rem;
+        margin: auto;
     }
 }
 
